immutable package